Startup of H2 in-memory database added to pre-integration-test phase in favour of programmatic control